<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="447dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"

                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/c"
                android:textColor="#F30D0D"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnParanteze"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"

                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="()"
                android:textColor="#F30D0D"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnProcent"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"

                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="%"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnImpartit"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"

                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="/"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"

                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_7"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"

                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_8"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"

                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_9"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnInmultit"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"

                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/x"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_4"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_5"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_6"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnScadere"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="-"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_1"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_2"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_3"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnAdunare"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="+"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSemn"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="+/-"
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/_0"
                android:textColor="#F30D0D"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPunct"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="."
                android:textColor="#F30D0D"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnEgal"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:text="@string/egal"
                android:textColor="#F30D0D"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/txtResultat"
        android:layout_width="395dp"
        android:layout_height="92dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="12dp"
        android:defaultFocusHighlightEnabled="true"
        android:ems="10"
        android:hint="@string/introdu_numerele"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:text="@string/calculator"
        android:textColor="#FA0505"
        android:textSize="30sp" />

</RelativeLayout>